--- a/player/proj.win32/player.vcxproj.filters
+++ b/player/proj.win32/player.vcxproj.filters
@@ -53,6 +53,7 @@
     <ClInclude Include="SimulatorWindow.h">
       <Filter>win32</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
