--- a/tools/tolua/cocos2dx_base.ini
+++ b/tools/tolua/cocos2dx_base.ini
@@ -1,13 +1,11 @@
-[cocos2dx_audioengine]
+[cocos2d-x]
 # the prefix to be added to the generated functions. You might or might not use this in your own
 # templates
-prefix = cocos2dx_audioengine
+prefix = cocos2dx
 
 # create a target namespace (in javascript, this would create some code like the equiv. to `ns = ns || {}`)
 # all classes will be embedded in that namespace
-target_namespace = ccexp
-
-macro_judgement  = #if CC_TARGET_PLATFORM == CC_PLATFORM_ANDROID || CC_TARGET_PLATFORM == CC_PLATFORM_IOS || CC_TARGET_PLATFORM == CC_PLATFORM_MAC || CC_TARGET_PLATFORM == CC_PLATFORM_WIN32
+target_namespace = cc
 
 android_headers = -I%(androidndkdir)s/platforms/android-14/arch-arm/usr/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.7/libs/armeabi-v7a/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.7/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.8/libs/armeabi-v7a/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.8/include
 android_flags = -D_SIZE_T_DEFINED_
@@ -15,8 +13,7 @@ android_flags = -D_SIZE_T_DEFINED_
 clang_headers = -I%(clangllvmdir)s/lib/clang/%(clang_version)s/include
 clang_flags = -nostdinc -x c++ -std=c++11 -U __SSE__
 
-cocos_headers = -I%(cocosdir)s -I%(cocosdir)s/cocos -I%(cocosdir)s/cocos/platform/android -I%(cocosdir)s/external
-
+cocos_headers = -I%(cocosdir)s/cocos -I%(cocosdir)s/cocos/platform/android -I%(cocosdir)s/cocos/editor-support -I%(cocosdir)s/external
 cocos_flags = -DANDROID
 
 cxxgenerator_headers =
@@ -25,11 +22,11 @@ cxxgenerator_headers =
 extra_arguments = %(android_headers)s %(clang_headers)s %(cxxgenerator_headers)s %(cocos_headers)s %(android_flags)s %(clang_flags)s %(cocos_flags)s %(extra_flags)s
 
 # what headers to parse
-headers = %(cocosdir)s/cocos/audio/include/AudioEngine.h
+headers = %(cocosdir)s/cocos/cocos2d.h %(cocosdir)s/cocos/base/CCAsyncTaskPool.h
 
 # what classes to produce code for. You can use regular expressions here. When testing the regular
 # expression, it will be enclosed in "^$", like this: "^Menu*$".
-classes = AudioEngine AudioProfile
+classes = Node Sprite
 
 # what should we skip? in the format ClassName::[function function]
 # ClassName is a regular expression, but will be used like this: "^ClassName$" functions are also
@@ -38,24 +35,34 @@ classes = AudioEngine AudioProfile
 # will apply to all class names. This is a convenience wildcard to be able to skip similar named
 # functions from all classes.
 
-skip = AudioEngine::[setFinishCallback]
+skip = Node::[setGLServerState description getUserObject .*UserData getGLServerState .*schedule getPosition$ setContentSize setAnchorPoint enumerateChildren .*Callback .*Transform .*Quat .*ActionManager .*CascadeColorEnabled .*Tag .*SkewY .*GLProgram* .*CameraMask .*3D .*Skew* .*Exit* .*Arrival* .*Z .*UserObject setEventDispatcher setScheduler getNumberOfRunningActions reorderChild getScene getDescription],
+        Sprite::[getQuad ^setPosition$ ^create$ setPolygonInfo initWithPolygon getPolygonInfo initWith .*BatchNode .*Dirty .*AtlasIndex setVertexRect .*TextureAtlas]
 
-rename_functions =
+rename_functions = SpriteFrameCache::[addSpriteFramesWithFile=addSpriteFrames getSpriteFrameByName=getSpriteFrame],
+    ProgressTimer::[setReverseProgress=setReverseDirection],
+    AnimationCache::[addAnimationsWithFile=addAnimations],
+    GLProgram::[setUniformLocationWith1i=setUniformLocationI32],
+    Node::[removeFromParentAndCleanup=removeFromParent removeAllChildrenWithCleanup=removeAllChildren],
+    LabelAtlas::[create=_create],
+    Touch::[getID=getId],
+    FileUtils::[loadFilenameLookupDictionaryFromFile=loadFilenameLookup],
+    Director::[end=endToLua]
 
-rename_classes =
+rename_classes = ParticleSystemQuad::ParticleSystem
 
 # for all class names, should we remove something when registering in the target VM?
 remove_prefix =
 
 # classes for which there will be no "parent" lookup
-classes_have_no_parents = AudioEngine AudioProfile
+classes_have_no_parents = Director FileUtils TMXMapInfo Application
 
 # base classes which will be skipped when their sub-classes found them.
 base_classes_to_skip = Clonable
 
 # classes that create no constructor
 # Set is special and we will use a hand-written constructor
-abstract_classes = AudioEngine
+abstract_classes = Action FiniteTimeAction ActionInterval ActionEase EaseRateAction EaseElastic EaseBounce ActionInstant GridAction Grid3DAction TiledGrid3DAction Director SpriteFrameCache TransitionEaseScene Set FileUtils Application ClippingNode Label GLViewImpl GLView EventAcceleration DisplayLinkDirector Component Console EventListener BaseLight
 
 # Determining whether to use script object(js object) to control the lifecycle of native(cpp) object or the other way around. Supported values are 'yes' or 'no'.
 script_control_cpp = no
+
