--- a/tools/tolua/cocos2dx_base.ini
+++ b/tools/tolua/cocos2dx_base.ini
@@ -26,7 +26,7 @@ headers = %(cocosdir)s/cocos/cocos2d.h %(cocosdir)s/cocos/base/CCAsyncTaskPool.h
 
 # what classes to produce code for. You can use regular expressions here. When testing the regular
 # expression, it will be enclosed in "^$", like this: "^Menu*$".
-classes = Node Sprite
+classes = Node Sprite FileUtils$ Director Scene Label.*
 
 # what should we skip? in the format ClassName::[function function]
 # ClassName is a regular expression, but will be used like this: "^ClassName$" functions are also
@@ -36,7 +36,16 @@ classes = Node Sprite
 # functions from all classes.
 
 skip = Node::[setGLServerState description getUserObject .*UserData getGLServerState .*schedule getPosition$ setContentSize setAnchorPoint enumerateChildren .*Callback .*Transform .*Quat .*ActionManager .*CascadeColorEnabled .*Tag .*SkewY .*GLProgram* .*CameraMask .*3D .*Skew* .*Exit* .*Arrival* .*Z .*UserObject setEventDispatcher setScheduler getNumberOfRunningActions reorderChild getScene getDescription],
-        Sprite::[getQuad ^setPosition$ ^create$ setPolygonInfo initWithPolygon getPolygonInfo initWith .*BatchNode .*Dirty .*AtlasIndex setVertexRect .*TextureAtlas]
+        Sprite::[getQuad ^setPosition$ ^create$ setPolygonInfo initWithPolygon getPolygonInfo initWith .*BatchNode .*Dirty .*AtlasIndex setVertexRect .*TextureAtlas updateTransform getBatchNode setBatchNode setVertexRect setDisplayFrameWithAnimationName isDirty setDirty isTextureRectRotated getAtlasIndex setAtlasIndex getTextureAtlas setTextureAtlas getOffsetPosition getDescription draw getResourceType getResourceName],
+        FileUtils::[getFileData getDataFromFile writeDataToFile getFullPathCache],
+        Director::[getAccelerometer getProjection getFrustum getRenderer getCocos2dThreadId],
+        Scene::[getCameras getLights .*(Physics3D).* .*(NavMesh).* getDescription getDefaultCamera createWithSize],
+        Label::[createWithTTF],
+        Copying::[*],
+        LabelProtocol::[*],
+        LabelTextFormatProtocol::[*],
+        LabelTTF::[*],
+        LabelBMFont::[*]
 
 rename_functions = SpriteFrameCache::[addSpriteFramesWithFile=addSpriteFrames getSpriteFrameByName=getSpriteFrame],
     ProgressTimer::[setReverseProgress=setReverseDirection],
