--- a/tools/tolua/cocos2dx_base.ini
+++ b/tools/tolua/cocos2dx_base.ini
@@ -26,7 +26,7 @@ headers = %(cocosdir)s/cocos/cocos2d.h %(cocosdir)s/cocos/base/CCAsyncTaskPool.h
 
 # what classes to produce code for. You can use regular expressions here. When testing the regular
 # expression, it will be enclosed in "^$", like this: "^Menu*$".
-classes = Node Sprite FileUtils$ Director Scene Label.*
+classes = Node Sprite FileUtils$ Director Scene Label.* Application GLView SpriteFrameCache AnimationCache ActionManager TextureCache Scheduler
 
 # what should we skip? in the format ClassName::[function function]
 # ClassName is a regular expression, but will be used like this: "^ClassName$" functions are also
@@ -38,14 +38,20 @@ classes = Node Sprite FileUtils$ Director Scene Label.*
 skip = Node::[setGLServerState description getUserObject .*UserData getGLServerState .*schedule getPosition$ setContentSize setAnchorPoint enumerateChildren .*Callback .*Transform .*Quat .*ActionManager .*CascadeColorEnabled .*Tag .*SkewY .*GLProgram* .*CameraMask .*3D .*Skew* .*Exit* .*Arrival* .*Z .*UserObject setEventDispatcher setScheduler getNumberOfRunningActions reorderChild getScene getDescription],
         Sprite::[getQuad ^setPosition$ ^create$ setPolygonInfo initWithPolygon getPolygonInfo initWith .*BatchNode .*Dirty .*AtlasIndex setVertexRect .*TextureAtlas updateTransform getBatchNode setBatchNode setVertexRect setDisplayFrameWithAnimationName isDirty setDirty isTextureRectRotated getAtlasIndex setAtlasIndex getTextureAtlas setTextureAtlas getOffsetPosition getDescription draw getResourceType getResourceName],
         FileUtils::[getFileData getDataFromFile writeDataToFile getFullPathCache],
-        Director::[getAccelerometer getProjection getFrustum getRenderer getCocos2dThreadId],
+        Director::[getAccelerometer getProjection getFrustum getRenderer getCocos2dThreadId setEventDispatcher getDeltaTime setGLDefaultValues setActionManager setAlphaBlending popToRootScene loadMatrix getNotificationNode isSendCleanupToScene mainLoop setDepthTest getFrameRate getSecondsPerFrame resetMatrixStack convertToUI pushMatrix setDefaultValues init setScheduler getMatrix setViewport popToSceneStackLevel isNextDeltaTimeZero setClearColor setOpenGLView convertToGL drawScene loadIdentityMatrix multiplyMatrix setNextDeltaTimeZero popMatrix getAnimationInterval getZEye getTotalFrames],
         Scene::[getCameras getLights .*(Physics3D).* .*(NavMesh).* getDescription getDefaultCamera createWithSize],
         Label::[createWithTTF],
         Copying::[*],
         LabelProtocol::[*],
         LabelTextFormatProtocol::[*],
         LabelTTF::[*],
-        LabelBMFont::[*]
+        LabelBMFont::[*],
+        Application::[getCurrentLanguageCode getVersion applicationScreenSizeChanged run setAnimationInterval openURL],
+        GLView::[isOpenGLReady swapBuffers setIMEKeyboardState windowShouldClose setGLContextAttrs getGLContextAttrs pollEvents setFrameSize setCursorVisible getRetinaFactor setContentScaleFactor getContentScaleFactor isRetinaDisplay getVisibleRect setDesignResolutionSize getDesignResolutionSize setViewPortInPoints setScissorInPoints isScissorEnabled getScissorRect setViewName getViewName getScaleY getViewPortRect getScaleX getVisibleOrigin setFrameZoomFactor getFrameZoomFactor getAllTouches getResolutionPolicy getVisibleSize end],
+        SpriteFrameCache::[reloadTexture init destroyInstance],
+        AnimationCache::[new init addAnimationsWithDictionary destroyInstance],
+        TextureCache::[new],
+        Scheduler::[schedule unscheduleAllWithMinPriority isScheduled resumeTargets pauseAllTargetsWithMinPriority pauseAllTargets]
 
 rename_functions = SpriteFrameCache::[addSpriteFramesWithFile=addSpriteFrames getSpriteFrameByName=getSpriteFrame],
     ProgressTimer::[setReverseProgress=setReverseDirection],
