add only section for binding

--- a/tools/tolua/cocos2dx_base.ini
+++ b/tools/tolua/cocos2dx_base.ini
@@ -28,6 +28,10 @@ headers = %(cocosdir)s/cocos/cocos2d.h %(cocosdir)s/cocos/base/CCAsyncTaskPool.h
 # expression, it will be enclosed in "^$", like this: "^Menu*$".
 classes = Node Sprite FileUtils$ Director Scene Label.* Application GLView SpriteFrameCache AnimationCache ActionManager TextureCache Scheduler
 
+
+# 某个类只导出这些接口, 配置了 only 的类不接受 skip 控制
+only = Scheduler::[scheduleScriptFunc unscheduleScriptEntry]
+
 # what should we skip? in the format ClassName::[function function]
 # ClassName is a regular expression, but will be used like this: "^ClassName$" functions are also
 # regular expressions, they will not be surrounded by "^$". If you want to skip a whole class, just
@@ -49,9 +53,7 @@ skip = Node::[setGLServerState description getUserObject .*UserData getGLServerS
         Application::[getCurrentLanguageCode getVersion applicationScreenSizeChanged run setAnimationInterval openURL],
         GLView::[isOpenGLReady swapBuffers setIMEKeyboardState windowShouldClose setGLContextAttrs getGLContextAttrs pollEvents setFrameSize setCursorVisible getRetinaFactor setContentScaleFactor getContentScaleFactor isRetinaDisplay getVisibleRect setDesignResolutionSize getDesignResolutionSize setViewPortInPoints setScissorInPoints isScissorEnabled getScissorRect setViewName getViewName getScaleY getViewPortRect getScaleX getVisibleOrigin setFrameZoomFactor getFrameZoomFactor getAllTouches getResolutionPolicy getVisibleSize end],
         SpriteFrameCache::[reloadTexture init destroyInstance],
-        AnimationCache::[new init addAnimationsWithDictionary destroyInstance],
-        TextureCache::[new],
-        Scheduler::[schedule unscheduleAllWithMinPriority isScheduled resumeTargets pauseAllTargetsWithMinPriority pauseAllTargets]
+        AnimationCache::[new init addAnimationsWithDictionary destroyInstance]
 
 rename_functions = SpriteFrameCache::[addSpriteFramesWithFile=addSpriteFrames getSpriteFrameByName=getSpriteFrame],
     ProgressTimer::[setReverseProgress=setReverseDirection],
