--- a/tools/tolua/cocos2dx_base.ini
+++ b/tools/tolua/cocos2dx_base.ini
@@ -29,8 +29,9 @@ headers = %(cocosdir)s/cocos/cocos2d.h %(cocosdir)s/cocos/base/CCAsyncTaskPool.h
 classes = Node Sprite FileUtils$ Director Scene Label.* Application GLView SpriteFrameCache AnimationCache ActionManager TextureCache Scheduler
 
 
-# 某个类只导出这些接口, 配置了 only 的类不接受 skip 控制
-only = Scheduler::[scheduleScriptFunc unscheduleScriptEntry]
+# 某个类只导出这些接口, 配置了 only 的类不接受 skip 控制, 除了 XX::[*]
+only = Scheduler::[unscheduleAll],
+        GLView::[getFrameSize]
 
 # what should we skip? in the format ClassName::[function function]
 # ClassName is a regular expression, but will be used like this: "^ClassName$" functions are also
@@ -51,7 +52,6 @@ skip = Node::[setGLServerState description getUserObject .*UserData getGLServerS
         LabelTTF::[*],
         LabelBMFont::[*],
         Application::[getCurrentLanguageCode getVersion applicationScreenSizeChanged run setAnimationInterval openURL],
-        GLView::[isOpenGLReady swapBuffers setIMEKeyboardState windowShouldClose setGLContextAttrs getGLContextAttrs pollEvents setFrameSize setCursorVisible getRetinaFactor setContentScaleFactor getContentScaleFactor isRetinaDisplay getVisibleRect setDesignResolutionSize getDesignResolutionSize setViewPortInPoints setScissorInPoints isScissorEnabled getScissorRect setViewName getViewName getScaleY getViewPortRect getScaleX getVisibleOrigin setFrameZoomFactor getFrameZoomFactor getAllTouches getResolutionPolicy getVisibleSize end],
         SpriteFrameCache::[reloadTexture init destroyInstance],
         AnimationCache::[new init addAnimationsWithDictionary destroyInstance]
 
@@ -78,7 +78,7 @@ base_classes_to_skip = Clonable
 
 # classes that create no constructor
 # Set is special and we will use a hand-written constructor
-abstract_classes = Action FiniteTimeAction ActionInterval ActionEase EaseRateAction EaseElastic EaseBounce ActionInstant GridAction Grid3DAction TiledGrid3DAction Director SpriteFrameCache TransitionEaseScene Set FileUtils Application ClippingNode Label GLViewImpl GLView EventAcceleration DisplayLinkDirector Component Console EventListener BaseLight
+abstract_classes = Action FiniteTimeAction ActionInterval ActionEase EaseRateAction EaseElastic EaseBounce ActionInstant GridAction Grid3DAction TiledGrid3DAction Director SpriteFrameCache TransitionEaseScene Set FileUtils Application ClippingNode Label GLViewImpl GLView EventAcceleration DisplayLinkDirector Component Console EventListener BaseLight AnimationCache Scheduler ActionManager LabelAtlas Sprite TextureCache Node Scene
 
 # Determining whether to use script object(js object) to control the lifecycle of native(cpp) object or the other way around. Supported values are 'yes' or 'no'.
 script_control_cpp = no
