--- a/templates/lua-template-default/cocos-project-template.json
+++ b/templates/lua-template-default/cocos-project-template.json
@@ -11,19 +11,7 @@
                "proj.win32/PROJECT_NAME.vcxproj.filters",
                "proj.win32/PROJECT_NAME.vcxproj.user",
                "proj.win32/PROJECT_NAME.sln",
-               "proj.ios_mac/PROJECT_NAME.xcodeproj",
-               "proj.win8.1-universal/PROJECT_NAME.sln",
-               "proj.win8.1-universal/App.Shared/PROJECT_NAME.Shared.vcxitems",
-               "proj.win8.1-universal/App.Shared/PROJECT_NAME.Shared.vcxitems.filters",
-               "proj.win8.1-universal/App.Windows/PROJECT_NAME.Windows_TemporaryKey.pfx",
-               "proj.win8.1-universal/App.Windows/PROJECT_NAME.Windows.vcxproj",
-               "proj.win8.1-universal/App.Windows/PROJECT_NAME.Windows.vcxproj.filters",
-               "proj.win8.1-universal/App.WindowsPhone/PROJECT_NAME.WindowsPhone.vcxproj",
-               "proj.win8.1-universal/App.WindowsPhone/PROJECT_NAME.WindowsPhone.vcxproj.filters",
-               "proj.win10/PROJECT_NAME.sln",
-               "proj.win10/App/PROJECT_NAME.vcxproj",
-               "proj.win10/App/PROJECT_NAME.vcxproj.filters",
-               "proj.win10/App/PROJECT_NAME_TemporaryKey.pfx"
+               "proj.ios_mac/PROJECT_NAME.xcodeproj"
             ]
          },
          "project_replace_project_name":{
@@ -35,37 +23,20 @@
                "proj.win32/PROJECT_NAME.vcxproj.user",
                "proj.win32/PROJECT_NAME.sln",
                "proj.win32/main.cpp",
-               "proj.win8.1-universal/PROJECT_NAME.sln",
-               "proj.win8.1-universal/App.Shared/PROJECT_NAME.Shared.vcxitems",
-               "proj.win8.1-universal/App.Windows/PROJECT_NAME.Windows.vcxproj",
-               "proj.win8.1-universal/App.Windows/PROJECT_NAME.Windows.vcxproj.filters",
-               "proj.win8.1-universal/App.Windows/Package.appxmanifest",
-               "proj.win8.1-universal/App.WindowsPhone/PROJECT_NAME.WindowsPhone.vcxproj",
-               "proj.win8.1-universal/App.WindowsPhone/PROJECT_NAME.WindowsPhone.vcxproj.filters",
-               "proj.win8.1-universal/App.WindowsPhone/Package.appxmanifest",
                "proj.android/.project",
                "proj.android/.cproject",
                "proj.android/AndroidManifest.xml",
                "proj.android/build.xml",
                "proj.android/res/values/strings.xml",
-               "proj.android-studio/settings.gradle",
-               "proj.android-studio/app/res/values/strings.xml",
                "proj.ios_mac/ios/main.m",
                "proj.ios_mac/ios/Prefix.pch",
-               "proj.ios_mac/PROJECT_NAME.xcodeproj/project.pbxproj",
-               "proj.win10/PROJECT_NAME.sln",
-               "proj.win10/App/PROJECT_NAME.vcxproj",
-               "proj.win10/App/PROJECT_NAME.vcxproj.filters",
-               "proj.win10/App/Package.appxmanifest",
-               "CMakeLists.txt"
+               "proj.ios_mac/PROJECT_NAME.xcodeproj/project.pbxproj"
             ]
          },
          "project_replace_package_name":{
             "src_package_name":"org.cocos2dx.hellocpp",
             "files":[
-               "proj.android/AndroidManifest.xml",
-               "proj.android-studio/app/build.gradle",
-               "proj.android-studio/app/AndroidManifest.xml"
+               "proj.android/AndroidManifest.xml"
             ]
          },
          "project_replace_mac_bundleid": {
@@ -81,6 +52,7 @@
             ]
          }
       },
+      "do_add_native_support": {},
       "change_orientation": {
          "modify_files": [
             {
@@ -102,26 +74,6 @@
                "file_path": "proj.android/AndroidManifest.xml",
                "pattern": "android:screenOrientation=\\\".*\\\"",
                "replace_string": "android:screenOrientation=\"portrait\""
-            },
-            {
-               "file_path": "proj.android-studio/app/AndroidManifest.xml",
-               "pattern": "android:screenOrientation=\\\".*\\\"",
-               "replace_string": "android:screenOrientation=\"portrait\""
-            },
-            {
-               "file_path": "proj.win10/App/Package.appxmanifest",
-               "pattern": "Rotation Preference=\\\"landscape",
-               "replace_string": "Rotation Preference=\"portrait"
-            },
-            {
-               "file_path": "proj.win8.1-universal/App.Windows/Package.appxmanifest",
-               "pattern": "Rotation Preference=\\\"landscape",
-               "replace_string": "Rotation Preference=\"portrait"
-            },
-            {
-               "file_path": "proj.win8.1-universal/App.WindowsPhone/Package.appxmanifest",
-               "pattern": "Rotation Preference=\\\"landscape",
-               "replace_string": "Rotation Preference=\"portrait"
             }
          ]
       }
