--- a/player/proj.win32/player.vcxproj.filters
+++ b/player/proj.win32/player.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="..\Classes\ProjectConfig\SimulatorConfig.cpp">
       <Filter>src\ProjectConfig</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\BunnyMarkScene.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\MainScene.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -48,6 +54,12 @@
       <Filter>src\ProjectConfig</Filter>
     </ClInclude>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="..\Classes\BunnyMarkScene.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\MainScene.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
