Fix win32 wrong linked libcurl

--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,4 @@ tests/cpp-tests/Resources/audio
 /*/*/*/prebuilt-mk/Android.mk
 /*/*/*/*/prebuilt-mk/Android.mk
 *.xcscmblueprint
+build/cocos2d-win32.VC.opendb
